--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon app.js",
-    "start": "node app.js",
-    "heroku-postbuild": "cd client && npm install && npm run build"
+    "start": "node app.js"
   },
   "keywords": [],
   "author": "",
